--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
   padding: 0;
   font-size: 16px;
   font-family: 'Yota Digit', sans-serif;
-  font-weight: 600;
+  font-weight: 400;
 }
 
 
@@ -107,14 +107,19 @@ body {
 }
 
 .advice-item {
+  position: relative;
+  width: 225px;
+  height: 400px;
   margin-bottom: 50px;
   margin-left: 25px;
-  filter: drop-shadow(0px 0px 5px #ccc);
+  box-shadow: 0px 0px 5px 0px #ccc;
 }
 
 .advice-item__header {
   width: 100%;
-  background-color: white;
+  font-weight: 600;
+  font-size: 125%;
+  background-color: inherit;
   box-sizing: border-box;
   padding: 10px;
   text-align: center;
@@ -123,7 +128,7 @@ body {
 
 .advice-item__text {
   margin: 0;
-  background-color: white;
+  background-color: inherit;
   width: inherit;
   box-sizing: border-box;
   padding: 5px 5px 5px 40px;
@@ -247,7 +252,7 @@ body {
 
 .advice-name.checked {
   text-decoration: line-through;
-  text-decoration-color: red;
+  text-decoration-color: #00aeef;
 }
 
 .message {
@@ -313,7 +318,8 @@ body {
 
 .input-text .submit-button {
   font-family: 'Yota Digit';
-  font-weight: 600;
+  font-weight: 900;
+  font-size: 14px;
   width: 120px;
   box-sizing: border-box;
   transition: all 0.2s ease;
