sort files and add final fixes

--- a/style.css
+++ b/style.css
@@ -59,27 +59,33 @@ body {
 
 
 .work-links .crm {
-  background: white url('crm_logo.svg') no-repeat 50%;
+  background: white url('img/crm_logo.svg') no-repeat 50%;
 }
 
 .work-links .hotline {
-  background: white url('hotline_logo.svg') no-repeat 50%;
+  background: white url('img/hotline_logo.svg') no-repeat 50%;
   background-size: 50px 50px;
 }
 
 .work-links .tables {
-  background: white url('tables_logo.svg') no-repeat 50%;
+  background: white url('img/tables_logo.svg') no-repeat 50%;
   background-size: 50px;
 }
 
 .work-links .location {
-  background: white url('location_logo.svg') no-repeat 50%;
+  background: white url('img/location_logo.svg') no-repeat 50%;
   background-size: 50px;
 }
 
 .work-links .iknow {
-  background: white url('iknow_logo.svg') no-repeat 50%;
+  background: white url('img/iknow_logo.svg') no-repeat 50%;
   background-size: 50px;
+}
+
+.work-links .study {
+  background: white url('img/yota-study_logo.svg') no-repeat 50%;
+  background-size: 50px;
+  background-size: contain;
 }
 
 .main {
@@ -96,7 +102,7 @@ body {
 }
 
 .wrapper {
-  width: 85%;
+  width: 540px;
   margin: 0 auto;
 }
 
@@ -113,13 +119,21 @@ body {
   margin-bottom: 50px;
   margin-left: 25px;
   box-shadow: 0px 0px 5px 0px #ccc;
+  border-radius: 20px;
+}
+
+.advice-item.complete {
+  background-color: #00aeef;
+}
+
+.advice-item.complete .advice-name {
+  text-decoration-color: white;
 }
 
 .advice-item__header {
   width: 100%;
   font-weight: 600;
   font-size: 125%;
-  background-color: inherit;
   box-sizing: border-box;
   padding: 10px;
   text-align: center;
@@ -128,7 +142,6 @@ body {
 
 .advice-item__text {
   margin: 0;
-  background-color: inherit;
   width: inherit;
   box-sizing: border-box;
   padding: 5px 5px 5px 40px;
@@ -142,6 +155,8 @@ body {
 
 .list {
   display: flex;
+  justify-content: center;
+  max-width: 540px;
   position: relative;
   flex-direction: column;
   color: white;
@@ -155,17 +170,18 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 100%;
+  max-width: 540px;
   padding: 10px 20px;
   box-sizing: border-box;
-  background-color: #00aeef;
-  border-radius: 25px;
+  background-color: white;
+  color: #00aeef;
+  border-radius: 20px;
   border-color: white;
   box-sizing: border-box;
   margin-bottom: 20px;
   box-shadow: 0px 2px 5px 0px #ccc;
   font-size: 125%;
-  transition: all 0.6s ease;
+  transition: all 0.3s ease;
 }
 
 .checklist-item span {
@@ -192,10 +208,10 @@ body {
   width: 40px;
   height: 40px;
   border: none;
-  background: url('delete_cross.svg') no-repeat 50% 50%;
+  background: url('img/delete_cross.svg') no-repeat 50% 50%;
 }
 
-.checklist-item input {
+.checklist-item .checkbox {
   position: relative;
   visibility: hidden;
   width: 40px;
@@ -203,7 +219,7 @@ body {
 
  }
 
-.checklist-item input::after {
+.checklist-item .checkbox::after {
   box-sizing: content-box;
   display: block;
   position: absolute;
@@ -217,7 +233,7 @@ body {
   box-shadow: 0px 0px 2px 2px #ccc;
   background-color: white;
   border-radius: 50%;
-  transition: all 0.6s ease;
+  transition: all 0.3s ease;
 }
 
 .checklist-item input:checked::after {
@@ -228,22 +244,16 @@ body {
 }
 
 .checklist-item.checked {
-  background-color: #99ff99;
-  color: #00aeef;
+  background-color: #00aeef;
+  color: white;
+}
+
+.delete-button {
+  transition: all 0.3 ease;
 }
 
 .delete-button:hover {
-  animation: rotate 0.5s ease;
-}
-
-@keyframes rotate {
-  0% {
-    transform: rotate(0deg);
-
-  }
-  100% {
-    transform: rotate(360deg);
-  }
+  transform: scale(1.1);
 }
 
 .advice-item__checkbox {
@@ -287,17 +297,17 @@ body {
 
 .input-text {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
+  width: 540px;
   margin-bottom: 50px;
 }
 .input-text input {
   font-family: 'Yota Digit';
   font-weight: 600;
-  width: 50%;
-  height: 50px;
+  width: 350px;
+  height: 30px;
   padding: 0px 20px;
-  margin-right: 50px;
   color: #00aeef;
   border: 1px solid;
   box-shadow: 0px 0px 5px 1px #ccc;
@@ -332,7 +342,7 @@ body {
 }
 
 .input-text .submit-button:hover {
-  transform: scale(1.2);
+  transform: scale(1.1);
 }
 
 .input-text .submit-button:active {
