Replace onChange func remove excess const bug fixes

--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
   justify-content: space-between;
   align-items: center;
   height: 80px;
-  box-shadow: 0px 1px 1px 0px #ccc;
+  box-shadow: 0 1px 1px 0 #ccc;
   margin-bottom: 20px;
   background-color: white;
   z-index: 2;
@@ -84,7 +84,6 @@ body {
 
 .work-links .study {
   background: white url('img/yota-study_logo.svg') no-repeat 50%;
-  background-size: 50px;
   background-size: contain;
 }
 
@@ -115,10 +114,9 @@ body {
 .advice-item {
   position: relative;
   width: 225px;
-  height: 400px;
   margin-bottom: 50px;
   margin-left: 25px;
-  box-shadow: 0px 0px 5px 0px #ccc;
+  box-shadow: 0 0 5px 0 #ccc;
   border-radius: 20px;
 }
 
@@ -177,9 +175,8 @@ body {
   color: #00aeef;
   border-radius: 20px;
   border-color: white;
-  box-sizing: border-box;
   margin-bottom: 20px;
-  box-shadow: 0px 2px 5px 0px #ccc;
+  box-shadow: 0 2px 5px 0 #ccc;
   font-size: 125%;
   transition: all 0.3s ease;
 }
@@ -226,11 +223,11 @@ body {
   visibility: visible;
   content: '';
   font-size: 0;
-  top: 0px;
-  left: 0px;
+  top: 0;
+  left: 0;
   width: 40px;
   height: 40px;
-  box-shadow: 0px 0px 2px 2px #ccc;
+  box-shadow: 0 0 2px 2px #ccc;
   background-color: white;
   border-radius: 50%;
   transition: all 0.3s ease;
@@ -239,7 +236,7 @@ body {
 .checklist-item input:checked::after {
   box-sizing: border-box;
   background-color: #00aeef;
-  box-shadow: 0px 0px 2px 2px #ccc;
+  box-shadow: 0 0 2px 2px #ccc;
   border: 2px solid white;
 }
 
@@ -249,7 +246,7 @@ body {
 }
 
 .delete-button {
-  transition: all 0.3 ease;
+  transition: all 0.3s ease;
 }
 
 .delete-button:hover {
@@ -266,7 +263,6 @@ body {
 }
 
 .message {
-  display: flex;
   justify-content: center;
   align-items: center;
   position: fixed;
@@ -277,7 +273,7 @@ body {
   display: none;
   background-color: #00aeef;
   border-radius: 10px;
-  box-shadow: 0px 0px 5px 5px #ccc;
+  box-shadow: 0 0 5px 5px #ccc;
   transition: all 2s ease;
 }
 
@@ -303,31 +299,29 @@ body {
   margin-bottom: 50px;
 }
 .input-text input {
-  font-family: 'Yota Digit';
+  font-family: 'Yota Digit', monospace;
   font-weight: 600;
   width: 350px;
   height: 30px;
-  padding: 0px 20px;
+  padding: 0 20px;
   color: #00aeef;
-  border: 1px solid;
-  box-shadow: 0px 0px 5px 1px #ccc;
-  border-color: #00aeef;
+  box-shadow: 0 0 5px 1px #ccc;
+  border: 1px solid #00aeef;
   border-radius: 10px;
 }
 
 .input-text input:hover {
-  box-shadow: 0px 0px 5px 0px #00aeef;
+  box-shadow: 0 0 5px 0 #00aeef;
 }
 
 .input-text input:focus {
-  border: 1px solid;
   outline: none;
   background-color: #ddd;
-  border-color: #00aeef;
+  border: 1px solid #00aeef;
 }
 
 .input-text .submit-button {
-  font-family: 'Yota Digit';
+  font-family: 'Yota Digit', monospace;
   font-weight: 900;
   font-size: 14px;
   width: 120px;
@@ -336,7 +330,7 @@ body {
   color: white;
   background-color: #00aeef;
   border: none;
-  box-shadow: 0px 0px 5px 1px #ccc;
+  box-shadow: 0 0 5px 1px #ccc;
   padding: 10px;
   border-radius: 20px;
 }
